--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -47,7 +47,7 @@
     --ui-body-color: #ffffff;
     --ui-body-secondary-color: #f2f2f7; /* change to border for light theme? */
     --ui-body-dim-color: #ffffff;
-    --ui-body-simple-bg: #ffffff;
+    --ui-body-simple-bg: #333845;
     --ui-font-border-color: #d5d5d5;
 
     /* Font Colors */
