--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -993,13 +993,13 @@ body > [data-popper-placement] {
   height: 24px;
   padding: 0;
   border-radius: 30px;
-  background-color: var(--ui-base-color);
+  background-color: var(--ui-page-background);
   transition: background-color 0.2s ease;
 }
 
 .react-toggle:is(:hover, :focus-within):not(.react-toggle--disabled)
   .react-toggle-track {
-  background-color: var(--ui-page-background);
+  background-color: var(--ui-base-lighter-color);
 }
 
 .react-toggle--checked .react-toggle-track {
