--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -277,6 +277,7 @@ $ui-header-height: 55px;
   z-index: 2;
   outline: 0;
   overflow: hidden;
+  align-items: center;
 
   & > button {
     margin: 0;
