--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -263,7 +263,7 @@
 
   &.overlayed {
     box-sizing: content-box;
-    color: #fff; // Hardcoded color
+    color: var(--ui-highlight-color);
     padding: 2px;
   }
 
