--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -355,6 +355,7 @@ $ui-header-height: 55px;
   cursor: pointer;
   padding: 0 15px;
   transition: color 0.2s;
+  font-size: 1rem;
 
   &:disabled {
     color: var(--ui-font-dimmer-color);
