Tweak light theme color

--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -46,7 +46,7 @@
   --ui-secondary-color: #dfdfdf;
   --ui-shadow-color: #202020;
   --ui-body-color: #ffffff;
-  --ui-body-secondary-color: #f2f2f7; /* change to border for light theme? */
+  --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-font-border-color: #d5d5d5;
@@ -80,7 +80,7 @@
   --ui-secondary-color: #dfdfdf;
   --ui-shadow-color: #202020;
   --ui-body-color: #ffffff;
-  --ui-body-secondary-color: #f2f2f7; /* change to border for light theme? */
+  --ui-body-secondary-color: #eff2f5; /* change to border for light theme? */
   --ui-body-dim-color: #ffffff;
   --ui-body-simple-bg: #333845;
   --ui-font-border-color: #d5d5d5;
