Force preferences to use dark theme

--- a/app/javascript/flavours/aether/styles/variables.scss
+++ b/app/javascript/flavours/aether/styles/variables.scss
@@ -11,7 +11,8 @@
   accent-color: var(--ui-highlight-color);
 }
 
-.dark-theme {
+.dark-theme,
+.admin {
   /* Background colors */
   --ui-page-background: #191b22;
   --ui-base-color: #282c37;
