--- a/app/javascript/flavours/aether/styles/components/lists.scss
+++ b/app/javascript/flavours/aether/styles/components/lists.scss
@@ -1,8 +1,8 @@
 .list-editor {
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   flex-direction: column;
   border-radius: 8px;
-  box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
+  box-shadow: 2px 4px 15px var(--ui-dropdown-shadow);
   width: 380px;
   overflow: hidden;
 
@@ -12,7 +12,7 @@
 
   h4 {
     padding: 15px 0;
-    background: lighten($ui-base-color, 13%);
+    background: var(--ui-base-lighter-color);
     font-weight: 500;
     font-size: 16px;
     text-align: center;
@@ -28,7 +28,7 @@
 
     &.backdrop {
       width: calc(100% - 60px);
-      box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
+      box-shadow: 2px 4px 15px var(--ui-dropdown-shadow);
       border-radius: 0 0 0 8px;
     }
   }
@@ -53,10 +53,10 @@
 }
 
 .list-adder {
-  background: $ui-base-color;
+  background: var(--ui-base-color);
   flex-direction: column;
   border-radius: 8px;
-  box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
+  box-shadow: 2px 4px 15px var(--ui-dropdown-shadow);
   width: 380px;
   overflow: hidden;
 
@@ -65,11 +65,11 @@
   }
 
   &__account {
-    background: lighten($ui-base-color, 13%);
+    background: var(--ui-base-lighter-color);
   }
 
   &__lists {
-    background: lighten($ui-base-color, 13%);
+    background: var(--ui-base-lighter-color);
     height: 50vh;
     border-radius: 0 0 8px 8px;
     overflow-y: auto;
@@ -77,7 +77,7 @@
 
   .list {
     padding: 10px;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    border-bottom: 1px solid var(--ui-base-lighter-color);
   }
 
   .list__wrapper {
