CW Visibility changes
Finish CW Visbility in interface settings and remove all the backend settings from affecting aether flavour

--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -136,7 +136,8 @@
     line-height: 1.1;
   }
 
-  .status__content__spoiler--hidden {
+  .status__content__spoiler--hidden,
+  .status__content__spoiler--lockdown {
     display: none;
   }
 
