--- a/app/javascript/flavours/aether/styles/components/columns.scss
+++ b/app/javascript/flavours/aether/styles/components/columns.scss
@@ -340,6 +340,11 @@ $ui-header-height: 55px;
   height: 48px;
   display: flex;
   margin-inline-start: 0;
+
+  > .active {
+    color: var(--ui-font-color);
+    background: transparent;
+  }
 }
 
 .column-header__links {
@@ -351,11 +356,16 @@ $ui-header-height: 55px;
 }
 
 .column-header__button {
-  border: 0;
   cursor: pointer;
-  padding: 0 15px;
   transition: color 0.2s;
-  font-size: 1rem;
+  font-size: 16px;
+  border-radius: 100%;
+  margin-right: 5px;
+  color: var(--ui-highlight-color);
+  border: 3px solid;
+  background: transparent;
+  width: 48px;
+  height: 48px;
 
   &:disabled {
     color: var(--ui-font-dimmer-color);
