--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -132,7 +132,7 @@
 
   .status__content__spoiler--obscured {
     display: block;
-    font-family: flow-block, serif;
+    font-family: flow-block, sans-serif;
     line-height: 1.1;
   }
 
