--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -814,7 +814,7 @@ body > [data-popper-placement] {
   .column,
   .drawer {
     flex: 0 0 auto;
-    padding: 10px;
+    padding: 10px 0 0;
     padding-inline-start: 5px;
     padding-inline-end: 5px;
 
