--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -516,6 +516,7 @@ body > [data-popper-placement] {
     width: auto;
     height: auto;
     object-fit: contain;
+    backface-visibility: hidden;
   }
 }
 
