--- a/app/javascript/flavours/aether/styles/components/search.scss
+++ b/app/javascript/flavours/aether/styles/components/search.scss
@@ -9,7 +9,7 @@
     inset-inline-start: 0;
     margin-top: -2px;
     width: 100%;
-    background: $ui-base-color;
+    background: var(--ui-base-color);
     border-radius: 0 0 4px 4px;
     box-shadow: 4px 4px 6px rgba($base-shadow-color, 0.4);
     z-index: 99;
