--- a/app/javascript/flavours/aether/styles/components/announcements.scss
+++ b/app/javascript/flavours/aether/styles/components/announcements.scss
@@ -120,7 +120,7 @@
 
   &__item {
     flex-shrink: 0;
-    background: var(--ui-base-lighter-color);
+    background: var(--ui-body-secondary-color);
     border: 0;
     border-radius: 3px;
     margin: 2px;
