--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -1231,6 +1231,7 @@ img.parallax[src*='/headers/original/missing.png'] {
     padding: 10px 0;
     font-size: 1rem;
     font-weight: bold;
+    margin-top: 8px;
 
     a {
       text-decoration: none;
