--- a/app/javascript/flavours/aether/styles/components/compose_form.scss
+++ b/app/javascript/flavours/aether/styles/components/compose_form.scss
@@ -562,7 +562,7 @@
 
       &:hover {
         background-color: var(--ui-highlight-color);
-        color: var(--ui-font-color);
+        color: var(--ui-highlight-button-text-color);
       }
     }
   }
