--- a/app/javascript/flavours/aether/styles/components/misc.scss
+++ b/app/javascript/flavours/aether/styles/components/misc.scss
@@ -244,7 +244,7 @@
     &:hover,
     &:active,
     &:focus {
-      color: var(--ui-font-color);
+      color: var(--ui-body-secondary-color);
     }
 
     &.disabled {
