--- a/app/javascript/flavours/aether/styles/components/modal.scss
+++ b/app/javascript/flavours/aether/styles/components/modal.scss
@@ -495,7 +495,7 @@
   }
 
   .dropdown-menu__separator {
-    border-bottom-color: $ui-secondary-color;
+    border-bottom-color: var(--ui-body-secondary-color);
   }
 }
 
