--- a/app/javascript/flavours/aether/styles/components/compose_form.scss
+++ b/app/javascript/flavours/aether/styles/components/compose_form.scss
@@ -557,7 +557,7 @@
 
     .icon-button {
       border-radius: 8px 8px 0 0;
-      background-color: var(--ui-font-color);
+      background-color: var(--ui-body-color);
       color: var(--ui-highlight-color);
 
       &:hover {
