CSS fixes and removal of unused option

--- a/app/javascript/flavours/aether/styles/low_contrast.scss
+++ b/app/javascript/flavours/aether/styles/low_contrast.scss
@@ -52,6 +52,14 @@
     background: var(--ui-body-secondary-color);
     color: var(--ui-font-color);
   }
+
+  .drawer__header {
+    border: 2px solid var(--ui-highlight-color);
+  }
+
+  .drawer__header > * {
+    color: var(--ui-highlight-color);
+  }
 }
 
 .hicolor-action-buttons {
