--- a/app/javascript/flavours/aether/styles/low_contrast.scss
+++ b/app/javascript/flavours/aether/styles/low_contrast.scss
@@ -55,6 +55,7 @@
 
   .drawer__header {
     border: 2px solid var(--ui-highlight-color);
+    background-color: transparent;
   }
 
   .drawer__header > * {
