Implement Trending Hashtag/Account Suggest modals
Remove the old Explore code, created dedicated pages for Trending Hashtags and Account Suggestions for Advanced Layout, and tidy up some of the SCSS

--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -36,6 +36,32 @@
   }
 }
 
+.trending_hashtags-modal,
+.suggestions-modal,
 .compose-modal {
   width: 700px;
+  max-height: 100vw;
+  overflow-y: auto;
+}
+
+.right-column-show-more {
+  display: flex;
+  justify-content: center;
+}
+
+.trending_hashtags-modal,
+.suggestions-modal {
+  min-height: 200px;
+  background: var(--ui-body-secondary-color);
+  border-radius: 8px;
+  padding: 12px;
+}
+
+@media screen and (max-width: $no-gap-breakpoint) {
+  .trending_hashtags-modal,
+  .suggestions-modal,
+  .compose-modal,
+  .compose-form {
+    width: 100vw;
+  }
 }
