--- a/app/javascript/flavours/aether/styles/modal.scss
+++ b/app/javascript/flavours/aether/styles/modal.scss
@@ -36,7 +36,17 @@
   }
 }
 
-.trending_hashtags-modal,
+.trending_hashtags-modal {
+  width: 500px;
+  max-height: 100vw;
+  overflow-y: auto;
+
+  .explore__links {
+    width: 500px;
+    margin: 0 auto;
+  }
+}
+
 .suggestions-modal,
 .compose-modal {
   width: 700px;
@@ -63,5 +73,9 @@
   .compose-modal,
   .compose-form {
     width: 100vw;
+
+    .explore__links {
+      width: auto;
+    }
   }
 }
