--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -417,7 +417,7 @@
       color: var(--ui-highlight-color);
     }
 
-    &:active {
+    &.active {
       background: var(--ui-highlight-color);
       color: var(--ui-highlight-button-text-color);
 
