--- a/app/javascript/flavours/aether/styles/components/status.scss
+++ b/app/javascript/flavours/aether/styles/components/status.scss
@@ -409,7 +409,8 @@
     margin-right: 4px;
     transition:
       color 0.2s,
-      background 0.2s;
+      background 0.2s,
+      box-shadow 0.2s;
     border-radius: 100%;
     color: var(--ui-font-dimmer-color);
 
